--- a/element-search/menu/task.css
+++ b/element-search/menu/task.css
@@ -14,6 +14,10 @@ body {
   margin: 0;
 }
 
+.menu_main:not(:last-child) {
+  margin-bottom: 100px;
+}
+
 .menu__link {
   text-decoration: none;
   color: #000;
