Task 7.3 -> fix progressbar in safari

--- a/async-requests/progressbar/task.css
+++ b/async-requests/progressbar/task.css
@@ -1,6 +1,26 @@
+/* ---------- кроссбраузерная стилизация progressbar: ---------- */
 progress {
   margin-bottom: 10px;
+
+  background-color: gray;
+  border-radius: 20px;
 }
+
+progress::-moz-progress-bar {
+  background-color: gray;
+  border-radius: 20px;
+}
+
+progress::-webkit-progress-bar {
+  background-color: gray;
+  border-radius: 20px;
+}
+
+progress::-webkit-progress-value {
+  background-color: green;
+  border-radius: 20px;
+}
+/* ------------------------------------------------------------- */
 
 form {
   position: relative;
