--- a/client-state/auth/task.css
+++ b/client-state/auth/task.css
@@ -1,17 +1,19 @@
 .signin {
   display: none;
 }
+
 .signin_active {
   display: block;
 }
+
 .control {
-    width: 100%;
-    display: block;
-    padding: 10px 20px;
-    margin: 0 0 20px 0;
-    font-family: Golos, Arial, sans-serif;
-    border: 1px solid #e2e2e2;
-    box-sizing: border-box;
+  width: 100%;
+  display: block;
+  padding: 10px 20px;
+  margin: 0 0 20px 0;
+  font-family: Golos, Arial, sans-serif;
+  border: 1px solid #e2e2e2;
+  box-sizing: border-box;
 }
 
 .btn {
@@ -43,5 +45,16 @@
 
 .welcome_active {
   display: block;
+  margin-bottom: 25px;
   text-align: center;
+}
+
+.btn-logout {
+  display: none;
+}
+
+.btn-logout_active {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
